--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@
     color: white;
     margin-right: 1%;
     font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .ms-img {
